Spring Boot 2.2.5, Java 13 and Hateos 1.0.3