@@ -1,7 +1,6 @@
 package com.kerneldc.flightlogserver.security.domain;
 
 import java.lang.invoke.MethodHandles;
-import java.util.Arrays;
 import java.util.List;
 
 import org.hibernate.boot.model.naming.Identifier;
@@ -14,16 +13,15 @@ public class UpperCaseNamingStrategy extends SpringPhysicalNamingStrategy {
 
 	private static final Logger LOGGER = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
-	private List<String> entitiesThatNeedUpperCaseTables = Arrays.asList("user", "group");
+	private List<String> entitiesThatNeedUpperCaseTables = List.of("user", "group");
 	
 	@Override
 	public Identifier toPhysicalTableName(Identifier name, JdbcEnvironment context) {
 		String entityName = name.getText();
 		Identifier tableNameIdentifier = super.toPhysicalTableName(name, context);
-		for (String entity : entitiesThatNeedUpperCaseTables) {
-			if (entity.equalsIgnoreCase(entityName)) {
-				String uppercaseTableName = super.toPhysicalTableName(name, context).getText().toUpperCase();
-				tableNameIdentifier = context.getIdentifierHelper().toIdentifier(uppercaseTableName, true); // a value of true quotes the tableName
+		for (String entityThatNeedUpperCaseTable : entitiesThatNeedUpperCaseTables) {
+			if (entityThatNeedUpperCaseTable.equalsIgnoreCase(entityName)) {
+				tableNameIdentifier = context.getIdentifierHelper().toIdentifier(entityName.toUpperCase(), true); // a value of true quotes the tableName
 			}
 		}
 		LOGGER.debug("Entity name [{}] will be mapped to table name [{}]", entityName, tableNameIdentifier.getText());
